.metadata/.plugins/org.eclipse.cdt.ui/usbd_lib_hid_mouse.build.log
18:15:36 **** Build of configuration Debug for project usbd_lib_hid_mouse ****
make -r all 
Building file: ../example/src/hid_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DDEBUG -D__CODE_RED -D__USE_LPCOPEN -DCORE_M3 -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_chip_175x_6x\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_board_nxp_lpcxpresso_1769\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\usbd_lib_hid_mouse\example\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_chip_175x_6x\inc\usbd" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"example/src/hid_main.d" -MT"example/src/hid_main.o" -MT"example/src/hid_main.d" -o "example/src/hid_main.o" "../example/src/hid_main.c"
Finished building: ../example/src/hid_main.c
 
Building file: ../example/src/hid_mouse.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DDEBUG -D__CODE_RED -D__USE_LPCOPEN -DCORE_M3 -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_chip_175x_6x\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_board_nxp_lpcxpresso_1769\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\usbd_lib_hid_mouse\example\inc" -I"C:\Users\Joey\Documents\LPCXpresso_8.2.2_650\MATE_Workspace\LPC1769\lpc_chip_175x_6x\inc\usbd" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"example/src/hid_mouse.d" -MT"example/src/hid_mouse.o" -MT"example/src/hid_mouse.d" -o "example/src/hid_mouse.o" "../example/src/hid_mouse.c"
../example/src/hid_mouse.c: In function 'Mouse_UpdateReport':
../example/src/hid_mouse.c:84:28: warning: implicit declaration of function 'Joystick_GetStatus' [-Wimplicit-function-declaration]
  uint8_t joystick_status = Joystick_GetStatus();
                            ^
../example/src/hid_mouse.c:88:7: error: 'JOY_PRESS' undeclared (first use in this function)
  case JOY_PRESS:
       ^
../example/src/hid_mouse.c:88:7: note: each undeclared identifier is reported only once for each function it appears in
../example/src/hid_mouse.c:92:7: error: 'JOY_LEFT' undeclared (first use in this function)
  case JOY_LEFT:
       ^
../example/src/hid_mouse.c:96:7: error: 'JOY_RIGHT' undeclared (first use in this function)
  case JOY_RIGHT:
       ^
../example/src/hid_mouse.c:100:7: error: 'JOY_UP' undeclared (first use in this function)
  case JOY_UP:
       ^
../example/src/hid_mouse.c:104:7: error: 'JOY_DOWN' undeclared (first use in this function)
  case JOY_DOWN:
       ^
../example/src/hid_mouse.c: In function 'Mouse_Init':
../example/src/hid_mouse.c:179:2: warning: implicit declaration of function 'Board_Joystick_Init' [-Wimplicit-function-declaration]
  Board_Joystick_Init();
  ^
make: *** [example/src/hid_mouse.o] Error 1

18:15:37 Build Finished (took 958ms)

